Correctly aligned experimental version number

--- a/resources/style.css
+++ b/resources/style.css
@@ -130,7 +130,7 @@ body {
   
 }
 .supexp {
-  padding-left: 5.0vw
+  padding-left: 4.5vw
 }
 .suplat {
   padding-left: 7.2vw
